objects/L2I_DSL__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Identifier_Link__c</fullName>
        <description>Searches by tail #, AC Registration, GPIN, serial and block number</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Aircraft__c , PT_Aircraft_Program_Identification_Field__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Searches by tail #, AC Registration, GPIN, serial and block number</inlineHelpText>
        <label>Tail #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Identifier__c</fullName>
        <formula>IF(ISBLANK( IFEC_DSL__c ), Aircraft__r.Name,
IFEC_DSL__r.Aircraft__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link by custom field to the associated aircraft object</inlineHelpText>
        <label>Aircraft</label>
        <referenceTo>L2I_Aircraft__c</referenceTo>
        <relationshipLabel>Delivery Schedule Lines</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Avg_Head_End_MROD_Date__c</fullName>
        <label>Average MROD - HeadEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Avg_Seat_End_MROD_Date__c</fullName>
        <label>Average MROD - SeatEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Min_MROD_Date__c</fullName>
        <label>Earliest MROD - E</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XXXX Part List</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Delivery Schedule Lines (Part List)</relationshipLabel>
        <relationshipName>Delivery_Schedule_Lines_Old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Opportunity__c</fullName>
        <description>Getting the Deal Opportunity record from the Delivery Schedule Header. (For use in the Flow on the Deal Lightning Page.</description>
        <formula>Delivery_Schedule_Header__r.Deal_Opportunity__c</formula>
        <label>xxDeal Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Date_for_Rollup__c</fullName>
        <label>Del Date for Rollup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <inlineHelpText>This field is required for Hardware Delivery Schedule Lines</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Schedule_Header__c</fullName>
        <label>Delivery Schedule Header</label>
        <referenceTo>L2I_DSH__c</referenceTo>
        <relationshipLabel>Delivery Schedule Lines</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_Headend_MROD__c</fullName>
        <description>Average of MRODs or Forecast Date if NULL</description>
        <formula>IF( ISBLANK( Asset_Avg_Head_End_MROD_Date__c ) ,  Head_End_Date__c , Asset_Avg_Head_End_MROD_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of MRODs or Forecast Date if NULL</inlineHelpText>
        <label>Display Headend MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Seat_MROD__c</fullName>
        <description>Average of MRODs or Forecast Date if NULL</description>
        <formula>IF(  ISBLANK(Asset_Avg_Seat_End_MROD_Date__c) , Seat_End_Date__c, Asset_Avg_Seat_End_MROD_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of MRODs or Forecast Date if NULL</inlineHelpText>
        <label>Display Seat End MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Amount_Value__c</fullName>
        <label>xxEstimated Amount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Delivery_Date__c</fullName>
        <formula>IF(ISBLANK(  IFEC_DSL__c ), Delivery_Date__c,
			ADDMONTHS(IFEC_DSL__r.Delivery_Date__c ,  Delivery_Schedule_Header__r.Delivery_Date_Offset__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardware_Program_Number__c</fullName>
        <label>Hardware Program Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_End_Date__c</fullName>
        <label>Head End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFEC_DSL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IFEC DSL</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>L2I_DSL__c.Product_Category__c</field>
                <operation>equals</operation>
                <value>IFEC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_DSL__c</referenceTo>
        <relationshipLabel>DSLs</relationshipLabel>
        <relationshipName>Delivery_Schedule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IFEC_Delivery_Date__c</fullName>
        <formula>IFEC_DSL__r.Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFEC Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Induction_Date__c</fullName>
        <description>Date that the aircraft rolls off the assembly line</description>
        <inlineHelpText>Date that the aircraft rolls off the assembly line</inlineHelpText>
        <label>Induction Rollout</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_AC_Entered_Into_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AC Entered Into Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Advertising_Est_Start_Date__c</fullName>
        <label>xxAdvertising Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Confirmation_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this gets triggered once an aircraft has been confirmed</description>
        <label>Aircraft Confirmation Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when aircraft has been verified and ready for services to be turned on.</description>
        <label>Aircraft Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Connectivity_Est_Start_Date__c</fullName>
        <label>xxConnectivity Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Games_Est_Start_Date__c</fullName>
        <label>xxGames Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Lead_Line_Id__c</fullName>
        <externalId>true</externalId>
        <label>L2I_Lead_Line_Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_TV_Est_Start_Date__c</fullName>
        <label>xxTV Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Modified_On_Opportunity_Number__c</fullName>
        <formula>Modified_on_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified On Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_On_Opportunity_Stage__c</fullName>
        <formula>TEXT(Modified_on_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified On Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_on_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified on Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Delivery Schedule Lines (Deleted on Opportunity)</relationshipLabel>
        <relationshipName>Delivery_Schedule_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Number__c</fullName>
        <formula>Original_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Stage__c</fullName>
        <formula>TEXT(Original_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Delivery Schedule Lines</relationshipLabel>
        <relationshipName>Delivery_Schedule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Out_of_Warranty_Date_1__c</fullName>
        <label>Out of Warranty Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Out_of_Warranty_Date_2__c</fullName>
        <label>Out of Warranty Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Active__c</fullName>
        <formula>IF(TEXT(PT_isActive__c) = &quot;Inactive&quot;, IMAGE(&quot;/img/func_icons/remove12_on.gif&quot;, &quot;red&quot;), IMAGE(&quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Aircraft_Program_Identification_Field__c</fullName>
        <description>The Program specific Identifier of the Aircraft</description>
        <formula>if( Text(PT_Program__r.Aircraft_Identifier_Field__c) = &#39;Block Number&#39;, Aircraft__r.L2I_Block_Number__c
,IF(Text(PT_Program__r.Aircraft_Identifier_Field__c) = &#39;Fleet Number&#39;, Aircraft__r.L2I_Fleet_Number__c
,IF(Text(PT_Program__r.Aircraft_Identifier_Field__c) = &#39;Line Number&#39;, Aircraft__r.L2I_Line_Number__c
,IF(Text(PT_Program__r.Aircraft_Identifier_Field__c) = &#39;Serial Number&#39;, Aircraft__r.L2I_Serial_Number__c
,IF(Text(PT_Program__r.Aircraft_Identifier_Field__c) = &#39;Tail Number&#39;, Aircraft__r.L2I_Registration_Number__c
, Aircraft_Identifier__c
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Program specific Identifier of the Aircraft</inlineHelpText>
        <label>Aircraft Program Identification Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Assigned_Part_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xxxAssigned Part List</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Delivery Schedule Lines (Assigned Part List)</relationshipLabel>
        <relationshipName>Delivery_Schedule_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Date_Source__c</fullName>
        <inlineHelpText>Method used in Date Entry</inlineHelpText>
        <label>Date Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. PAC DATES (guess by PAC)</fullName>
                    <default>true</default>
                    <label>1. PAC DATES (guess by PAC)</label>
                </value>
                <value>
                    <fullName>2. # of A/C per month (cust)</fullName>
                </value>
                <value>
                    <fullName>3. A/C delivery date (cust)</fullName>
                </value>
                <value>
                    <fullName>4. ODD (cust, WF, Boeing Matrix)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_InService_Date__c</fullName>
        <label>AC Entered Into Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Is_InService__c</fullName>
        <formula>IF (ISBLANK(PT_InService_Date__c), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is InService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Line_Number__c</fullName>
        <label>Line Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Name_Rev__c</fullName>
        <formula>Original_Opportunity__r.PT_Part_List_Name_Rev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List Name Rev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Parts_List_Link__c</fullName>
        <description>Used in GB Tabbed Grids to go to new window</description>
        <formula>Original_Opportunity__r.PT_Opportunity_Link_Tabbed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts List Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Parts_List__c</fullName>
        <formula>Original_Opportunity__r.PT_Opportunity_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program_MROD_Approval_Status__c</fullName>
        <formula>TEXT(PT_Program__r.MROD_Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program MROD Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Price List</label>
        <referenceTo>PT_PriceList__c</referenceTo>
        <relationshipLabel>Delivery Schedule Lines</relationshipLabel>
        <relationshipName>Delivery_Schedule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PT Program</label>
        <referenceTo>PT_Program__c</referenceTo>
        <relationshipLabel>Delivery Schedule Lines</relationshipLabel>
        <relationshipName>Delivery_Schedule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Tail_Number__c</fullName>
        <formula>Aircraft__r.L2I_Registration_Number__c</formula>
        <label>PT Tail Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Tail_Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Tail Uniqueness</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_isActive__c</fullName>
        <label>Shipset Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Delivery_Schedule_Header__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recalculated_At__c</fullName>
        <label>xxRecalculated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Seat_End_Date__c</fullName>
        <label>Seat End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Months_Copy__c</fullName>
        <label>xxService Months (copy)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Months__c</fullName>
        <formula>IF(Delivery_Schedule_Header__r.Subscription_Term__c - (MONTH(Delivery_Date__c) + (12*(YEAR(Delivery_Date__c)-YEAR(Delivery_Schedule_Header__r.First_Delivery_Date__c))) - MONTH(Delivery_Schedule_Header__r.First_Delivery_Date__c))&lt; 0, 0, Delivery_Schedule_Header__r.Subscription_Term__c - (MONTH(Delivery_Date__c) + (12*(YEAR(Delivery_Date__c)-YEAR(Delivery_Schedule_Header__r.First_Delivery_Date__c))) - MONTH(Delivery_Schedule_Header__r.First_Delivery_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxService Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xxName__c</fullName>
        <description>This is used to mimic the Auto Number for Standard Name field.</description>
        <displayFormat>DSL-{00000}</displayFormat>
        <label>xxName</label>
        <type>AutoNumber</type>
    </fields>
    <label>Delivery Schedule Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Aircraft__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Line_Number__c</columns>
        <columns>PT_Line_Number__c</columns>
        <columns>Original_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Schedule Lines</pluralLabel>
    <recordTypes>
        <fullName>Hardware</fullName>
        <active>true</active>
        <label>Hardware</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive</fullName>
        <active>true</active>
        <label>Inactive</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Aircraft_Confirmation_Check</fullName>
        <active>true</active>
        <description>This is to lock the Aircraft Confirmation once it&#39;s been checked</description>
        <errorConditionFormula>AND ( 
    AND($Profile.Name &lt;&gt; &#39;System Administrator&#39;),
    NOT(ISNEW()), 
    ISCHANGED(L2I_Aircraft_Confirmation__c), 
    PRIORVALUE(L2I_Aircraft_Confirmation__c) = true,
				Original_Opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__Ordered__c = true
)</errorConditionFormula>
        <errorMessage>The Aircraft and/or Aircraft Confirmation cannot be changed once it is confirmed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Update_Shipset_Inactive_Rec</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name &lt;&gt; &#39;System Administrator&#39;) &amp;&amp;
RecordType.DeveloperName = &quot;Inactive&quot; &amp;&amp;
(ISCHANGED(Head_End_Date__c) || ISCHANGED(Seat_End_Date__c) || ISCHANGED(Induction_Date__c) || ISCHANGED(Delivery_Date__c) || ISCHANGED(Forecasted_Delivery_Date__c) || ISCHANGED(Aircraft__c))</errorConditionFormula>
        <errorMessage>You are not allowed to make changes to Inactive Shipset.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Delivery_Date</fullName>
        <active>true</active>
        <description>Delivery Date is required for Hardware Delivery Schedules.</description>
        <errorConditionFormula>AND
(
 ISBLANK( Delivery_Date__c ),
 TEXT(Delivery_Schedule_Header__r.Product_Category__c) == &#39;IFEC&#39;,
 AND($Profile.Name &lt;&gt; &#39;System Administrator&#39;) 
)</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery Date is required for Hardware Delivery Schedules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Estimated_Start_Dates</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
 ISBLANK( Delivery_Date__c ),
 ISBLANK( L2I_Advertising_Est_Start_Date__c ),
 ISBLANK( L2I_Connectivity_Est_Start_Date__c ),  
 ISBLANK( L2I_Games_Est_Start_Date__c ), 
 ISBLANK( L2I_TV_Est_Start_Date__c )
)</errorConditionFormula>
        <errorMessage>For Hardware Delivery Schedules you must fill out the Delivery Date.
For Services Delivery Schedules you must fill out at least one of the below Estimated Start of Service Dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Linked_DSL_Aircraft</fullName>
        <active>true</active>
        <description>If the DSL is linked to an IFEC DSL then the Aircraft cannot be changed</description>
        <errorConditionFormula>AND(NOT(ISBLANK(IFEC_DSL__c)),  ISCHANGED( Aircraft__c ),AND($Profile.Name &lt;&gt; &#39;System Administrator&#39;)  )</errorConditionFormula>
        <errorMessage>Aircraft Identifier may not be changed when DSL is linked to an IFEC DSL.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Validate_Aircraft</fullName>
        <active>true</active>
        <errorConditionFormula>AND(L2I_Aircraft_Confirmation__c = TRUE,
AND($Profile.Name &lt;&gt; &#39;System Administrator&#39;),
OR (

AND((NOT(ISBLANK(IFEC_DSL__c))),
   OR(NOT(IFEC_DSL__r.Aircraft__r.L2I_Approved__c), ISBLANK(IFEC_DSL__r.Aircraft__c) )),

AND((ISBLANK(IFEC_DSL__c)),
OR(NOT(Aircraft__r.L2I_Approved__c), ISBLANK(Aircraft__c) ))
)
)</errorConditionFormula>
        <errorMessage>Selection of an Approved Aircraft is needed with Aircraft Confirmation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Original_Opportunity_Required</fullName>
        <active>false</active>
        <description>The Original Opportunity field is required when creating or editing a DSL. This rule can be turned off via a custom setting value.</description>
        <errorConditionFormula>AND ($Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c,
					 ISBLANK(Original_Opportunity__c) )</errorConditionFormula>
        <errorDisplayField>Original_Opportunity__c</errorDisplayField>
        <errorMessage>An Original Opportunity value is required on a DSL.</errorMessage>
    </validationRules>
</CustomObject>